fixed spacing between sections

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ main {
 h2 {
   font-family: "Titan One", cursive;
   color: #2b8a3e;
-  font-size: 6.4rem;
+  font-size: 5.5rem;
 }
 
 /* HEADER SECTION */
@@ -77,6 +77,8 @@ h2 {
   justify-content: center;
 }
 
+/* FEATURES  */
+
 .features,
 .timeline,
 .experience {
@@ -106,9 +108,11 @@ h2 {
 .timeline-heading {
   font-family: "Titan One", cursive;
   color: #2b8a3e;
-  font-size: 6.4rem;
+  font-size: 5.5rem;
   padding-bottom: 3rem;
 }
+
+/* GALLERY SECTION */
 
 .gallery-div {
   display: flex;
@@ -124,7 +128,7 @@ h2 {
 }
 
 .gallery-heading {
-  padding-bottom: 2.4rem;
+  padding-bottom: 5.5rem;
   justify-content: flex-start;
 }
 
@@ -177,6 +181,12 @@ h2 {
 .sub-gallery2 img {
   height: 100%;
   width: 100%;
+}
+
+/* EXPERIENCE SECTION */
+
+.experience {
+  margin-top: 6.4rem;
 }
 
 .experience-heading {
